--- a/credential-indexer/package.json
+++ b/credential-indexer/package.json
@@ -5,17 +5,23 @@
   "main": "dist/server.js",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/server.js",
-    "dev": "ts-node-dev server.ts",
-    "link:local": "./local-link.sh"
+    "build:sdk": "yarn --cwd ./cardano-js-sdk build && yarn --cwd ./cardano-js-sdk/packages/cardano-services-client build",
+    "connect": "yarn --cwd ./cardano-js-sdk/packages/cardano-services preprod:up cardano-node ogmios postgres",
+    "project": "./start-projection.sh",
+    "link:sdk": "./link.sh",
+    "start": "node dist/server.js"
   },
   "dependencies": {
+    "@cardano-sdk/cardano-services": "^0.28.13",
     "@cardano-sdk/ogmios": "^0.15.34",
     "@cardano-sdk/projection": "^0.11.24",
     "@cardano-sdk/projection-typeorm": "^0.8.26",
     "@cardano-sdk/util-rxjs": "^0.7.20",
-    "pg": "^8.12.0",
-    "rxjs": "^7.8.1",
+    "pg": "^8.9.0",
+    "pg-boss": "8.4.2",
+    "postgres": "^3.4.4",
+    "rxjs": "7.5.7",
+    "typeorm": "^0.3.20",
     "typeorm-extension": "^3.5.1",
     "ws": "^8.18.0"
   },
