test: add bench test timing

--- a/credential-indexer/package.json
+++ b/credential-indexer/package.json
@@ -8,7 +8,8 @@
     "build:sdk": "yarn --cwd ./cardano-js-sdk build && yarn --cwd ./cardano-js-sdk/packages/cardano-services-client build",
     "connect": "yarn --cwd ./cardano-js-sdk/packages/cardano-services preprod:up cardano-node ogmios postgres",
     "project": "./start-projection.sh",
-    "test:bench": "ts-node ./src/bench.test.ts",
+    "test:10": "ts-node ./src/bench.test.ts -- --arg=10",
+    "test:100": "ts-node ./src/bench.test.ts -- --arg=100",
     "link:sdk": "./link.sh",
     "start": "node dist/server.js"
   },
